# csff-mod-ja

./: .gitignore  En.csv  Ja.csv  Ja.po  LICENSE  Makefile  README.md  pyproject.toml
src/csff_mod_ja/: csv2pot.py  encsv.py  po2csv.py
